examples/test/testpolicy17123.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17123
  namespace: namespace318
spec:
  podSelector:
    matchLabels:
      key34: value25
      key13: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value8
      podSelector:
        matchLabels:
          key17: value10
          key18: value8
